--- a/library-sys-inven-mgmt/src/main/resources/static/index.html
+++ b/library-sys-inven-mgmt/src/main/resources/static/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LibSIM</title>
+    <!-- Favicon: https://realfavicongenerator.net/logo-maker/create-favicon -->
+    <link rel="icon" type="image/x-icon" href="logo-32px.ico" sizes="32x32">
+    <link rel="icon" type="image/x-icon" href="logo-16px.ico" sizes="16x16">
+    <!-- External CSS file-->
+     <link rel="stylesheet" href="css\style.css"/>
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-    
+    <header>
+        <div class="site-header">
+            <img src="logolarge.png" alt="Site Logo" class="header-logo"/>
+            <h1>LibSIM</h1>
+        </div>
+        <h4 class="navbar">Library System Inventory Management</h4>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
