Added custom exception, updated to fetch/then methodology, changed from requestbody in get request to pathvariable with new libraryservice method

--- a/library-sys-inven-mgmt/src/main/resources/static/index.html
+++ b/library-sys-inven-mgmt/src/main/resources/static/index.html
@@ -52,6 +52,14 @@
                         </thead>
                         <tbody id="library-table-body" class="table-group-divider">
                             <!--Libraries added dynamically here-->
+                            <tr class="d-flex">
+                                <td class="col-2 text-end" style="padding-right: 1vw;">Add Library:</td>
+                                <td class="col-10">
+                                    <form id="new-library-form">
+                                        
+                                    </form>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
