--- a/library-sys-inven-mgmt/src/main/resources/static/index.html
+++ b/library-sys-inven-mgmt/src/main/resources/static/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" type="image/x-icon" href="logo-16px.ico" sizes="16x16">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <!-- External CSS file-->
     <link rel="stylesheet" href="css\style.css"/>
 
@@ -16,15 +17,29 @@
 </head>
 <body class="bg-light-subtle text-center">
     <header class="bg-secondary border-bottom border-5">
-        <div class="container">
-            <div id="page-title">
-                <img style="height: 5vh; width: auto;" src="logo.svg" alt="Site Logo" class="rounded"/>
-                <h4 style="font-size: 5vh;" class="text-center"><b class="title-bold-text">Lib</b>rary <b class="title-bold-text">S</b>ystem <b class="title-bold-text">I</b>nventory <b class="title-bold-text">M</b>anager</h4>
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+                <div class="row justify-content-start">
+                    <div class="col-lg-8">
+                        <a class="navbar-brand" href="#">
+                            <div id="page-title-container">
+                                <img style="height: 5vh; width: auto;" src="logo.svg" alt="Site Logo" class="d-inline-block rounded"/>
+                                <h1 style="font-size: 3vh;" class="text-center"><b class="title-bold-text">Lib</b>rary <b class="title-bold-text">S</b>ystem <b class="title-bold-text">I</b>nventory <b class="title-bold-text">M</b>anager</h1>
+                            </div>
+                        </a>
+                    </div>
+                    <div id="dashboard-nav" class="col-lg-2 align-self-center">
+                        <a class="nav-link active" aria-current="page" href="#">Libraries</a>
+                    </div>
+                    <div id="adv-search-nav" class="col-lg-2 align-self-center">
+                        <a class="nav-link" href="#">Advanced Search</a>
+                    </div>
+                </div>
             </div>
-        </div>
+        </nav>
     </header>
     <main style="margin-top: 5vh;">
-        <div class="container-fluid">
+        <div id="dashboard" class="container-fluid">
             <!-- center the library table in this row-->
             <div class="row justify-content-center">
                 
@@ -46,7 +61,7 @@
                             <tr class="d-flex">
                                 <th class="col-2"></th>
                                 <th class="col-4">Name</th>
-                                <th class="col-4">City</th>
+                                <th class="col-4">Location</th>
                                 <th class="col-2">Current Capacity</th>
                             </tr>
                         </thead>
@@ -55,8 +70,8 @@
                             <tr class="d-flex">
                                 <td class="col-2 text-end" style="padding-right: 1vw;">Add Library:</td>
                                 <td class="col-10">
-                                    <form id="new-library-form">
-                                        
+                                    <form id="new-library-form" action="#">
+
                                     </form>
                                 </td>
                             </tr>
