--- a/library-sys-inven-mgmt/src/main/resources/static/index.html
+++ b/library-sys-inven-mgmt/src/main/resources/static/index.html
@@ -73,10 +73,60 @@
                     </form>
                 </div>
             </div>
+            <div class="row justify-content-center">
+                <!--EDIT LIBRARY FORM--> 
+                <div class="col-lg-8 table-responsive">
+                    <form id="edit-library-form" action="#">
+                        <table style="font-size: 2.5vh;" class="table table-dark table-hover table-bordered">
+                            <th>Edit Library</th>
+                            <tr class="d-flex">
+                                <td class="col-4">
+                                    <input id="edit-library-name" name="edit-library-name" class="form-control" type="text" placeholder="Enter Library Name">
+                                </td>
+                                <td class="col-4">
+                                    <input id="edit-library-location" name="edit-library-location" class="form-control" type="text" placeholder="Enter Library Location">
+                                </td>
+                                <td class="col-2">
+                                    <input id="edit-library-maxCap" name="edit-library-maxCap" class="form-control" type="number" placeholder="Enter Max Capacity">
+                                </td>
+                                <td class="col-2" style="justify-content: space-evenly;">
+                                    <input id="edit-library" name="save-edit-button" type="submit" value="Save" class="btn btn-primary me-3"/>
+                                    <button id="cancel-edit-button" name="cancel-edit-button" class="btn btn-secondary">Cancel</button>  
+                                </td>
+                            </tr>
+                        </table>
+                    </form>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <!--DELETE LIBRARY CONFIRMATION--> 
+                <div class="col-lg-8 table-responsive">
+                    <form id="delete-library-form" action="#">
+                        <table style="font-size: 2.5vh;" class="table table-dark table-bordered"> <!--removed table-hover for the delete message-->
+                            <th>Delete Library</th>
+                            <tr class="d-flex">
+                                <td class="col-4">
+                                    <input id="delete-library-name" name="delete-library-name" class="form-control" type="text" placeholder="Enter Library Name" disabled/>
+                                </td>
+                                <td class="col-4">
+                                    <input id="delete-library-location" name="delete-library-location" class="form-control" type="text" placeholder="Enter Library Location" disabled/>
+                                </td>
+                                <td class="col-2">
+                                    <input id="delete-library-maxCap" name="delete-library-maxCap" class="form-control" type="number" placeholder="Enter Max Capacity" disabled/>
+                                </td>
+                                <td class="col-2" style="justify-content: space-evenly;">
+                                    <input id="delete-library" name="delete-button" type="submit" value="Delete" class="btn btn-danger me-3"/>
+                                    <button id="cancel-delete-button" name="cancel-delete-button" class="btn btn-secondary">Cancel</button> 
+                                </td>
+                            </tr>
+                        </table>
+                    </form>
+                </div>
+            </div>
         </div>
     </main>
-    <footer>
 
-    </footer>
+    
+
 </body>
 </html>
