removed display of unused link

--- a/library-sys-inven-mgmt/src/main/resources/static/index.html
+++ b/library-sys-inven-mgmt/src/main/resources/static/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
                     </div>
                     <div id="adv-search-nav" class="col-lg-2 align-self-center">
-                        <a class="nav-link" href="#">Advanced Search</a>
+                        <a class="nav-link" href="#" style="display: none;">Advanced Search</a>
                     </div>
                 </div>
             </div>
